Fix button styling missing overflow: hidden

--- a/Website/index.css
+++ b/Website/index.css
@@ -60,6 +60,7 @@ textarea {
 	position: relative;
 	border: 2px var(--theme-border-color) solid;
 	background: none;
+	overflow: hidden;
 	
 	font-size: 1em;
 	color: inherit;
